==> apache/nuttx/arch/arm/src/imxrt/imxrt_tickless.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <stdbool.h>
#include <errno.h>
#include <assert.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <debug.h>
#include "arm_internal.h"
#include "imxrt_periphclks.h"
#include "hardware/imxrt_gpt.h"
#include "imxrt_irq.h"
#define GPT_CLOCK 16600000

static void imxrt_interval_handler(void)
{
  struct timespec tv;
  uint32_t regval;

  /* Disable the compare interrupt for now */

  regval = getreg32(g_tickless.base + IMXRT_GPT_IR_OFFSET);
  regval &= ~(1 << (g_tickless.out_compare - 1));
  putreg32(regval, g_tickless.base + IMXRT_GPT_IR_OFFSET);

  /* And clear it */

  putreg32((1 << (g_tickless.out_compare - 1)),
           g_tickless.base + IMXRT_GPT_SR_OFFSET);

  g_tickless.pending = false;

  up_timer_gettime(&tv);
  nxsched_alarm_expiration(&tv);
}

static void imxrt_timing_handler(void)
{
  g_tickless.overflow++;

  /* Clear interrupt bit */

  putreg32(GPT_SR_ROV, g_tickless.base + IMXRT_GPT_SR_OFFSET);
}

static int imxrt_tickless_handler(int irq, void *context, void *arg)
{
  uint32_t interrupt_flags;
  interrupt_flags = getreg32(g_tickless.base + IMXRT_GPT_SR_OFFSET);

  /* The free-run timer has reached its maximum value */

  if (interrupt_flags & GPT_SR_ROV)
    {
      imxrt_timing_handler();
    }

  /* Compare interrupt was generated */

  if (interrupt_flags & (1 << (g_tickless.out_compare - 1)))
    {
      imxrt_interval_handler();
    }

  return OK;
}

void up_timer_initialize(void)
{
  uint32_t regval;
  int prescaler;

  switch (CONFIG_IMXRT_TICKLESS_TIMER)
    {
      case 1:
        g_tickless.base = IMXRT_GPT1_BASE;
        g_tickless.irq = IMXRT_IRQ_GPT1;
        imxrt_clockall_gpt_bus();
        imxrt_clockall_gpt_serial();
        break;
      case 2:
        g_tickless.base = IMXRT_GPT2_BASE;
        g_tickless.irq = IMXRT_IRQ_GPT2;
        imxrt_clockall_gpt2_bus();
        imxrt_clockall_gpt2_serial();
        break;
      default:
        tmrerr("ERROR: Timer number invalid or not configured: %d\n",
                CONFIG_IMXRT_TICKLESS_TIMER);
        break;
    }

  /* Get the TC frequency that corresponds to the requested resolution */

  up_disable_irq(g_tickless.irq);

  g_tickless.frequency    = USEC_PER_SEC / (uint32_t)CONFIG_USEC_PER_TICK;
  g_tickless.timer        = CONFIG_IMXRT_TICKLESS_TIMER;
  g_tickless.out_compare  = CONFIG_IMXRT_TICKLESS_CHANNEL;
  g_tickless.pending      = false;
  g_tickless.overflow     = 0;

  tmrinfo("timer=%d channel=%d frequency=%lu Hz\n",
           g_tickless.timer, g_tickless.out_compare, g_tickless.frequency);

  /* Set clock source of the timer and enable free-run mode */

  regval = getreg32(g_tickless.base + IMXRT_GPT_CR_OFFSET);
  regval |= GPT_CR_CLKSRC_IPG | GPT_CR_FRR;
  putreg32(regval, g_tickless.base + IMXRT_GPT_CR_OFFSET);

  /* Set the prescaler register */

  prescaler = GPT_CLOCK / g_tickless.frequency;

  /* We need to decrement value for '1', but only, if that will not to
   * cause underflow.
   */

  if (prescaler > 0)
    {
      prescaler--;
    }

  /* Check for overflow as well. */

  if (prescaler > 0xfff)
    {
      prescaler = 0xfff;
    }

  /* Set the prescaler value */

  putreg32(prescaler, g_tickless.base + IMXRT_GPT_PR_OFFSET);

  /* Atache the interrupt handler */

  if (irq_attach(g_tickless.irq, imxrt_tickless_handler, NULL))
    {
      /* We could not attach the ISR to the interrupt */

      tmrerr("ERROR: Failed to attach GPT timer IRQ\n");
    }

  up_enable_irq(g_tickless.irq);

  /* Initialize interval to zero */

  putreg32(0, g_tickless.base + IMXRT_GPT_OCR1_OFFSET + \
          (4 * (g_tickless.out_compare - 1)));

  /* Initialize the counter and enable interrupts */

  regval = getreg32(g_tickless.base + IMXRT_GPT_IR_OFFSET);
  regval |= GPT_IR_ROVIE | (1 << (g_tickless.out_compare -1));
  putreg32(regval, g_tickless.base + IMXRT_GPT_IR_OFFSET);

  regval = getreg32(g_tickless.base + IMXRT_GPT_CR_OFFSET);
  regval |= GPT_CR_ENMOD;
  putreg32(regval, g_tickless.base + IMXRT_GPT_CR_OFFSET);

  /* Eneable the timer */

  regval = getreg32(g_tickless.base + IMXRT_GPT_CR_OFFSET);
  regval |= GPT_CR_EN;
  putreg32(regval, g_tickless.base + IMXRT_GPT_CR_OFFSET);
}

int up_timer_gettime(struct timespec *ts)
{
  uint64_t usec;
  uint32_t counter;
  uint32_t verify;
  uint32_t overflow;
  uint32_t sec;
  int pending;
  irqstate_t flags;

  /* Temporarily disable the overflow counter */

  flags    = enter_critical_section();

  overflow = g_tickless.overflow;
  counter  = getreg32(g_tickless.base + IMXRT_GPT_CNT_OFFSET);
  pending  = getreg32(g_tickless.base + IMXRT_GPT_SR_OFFSET) & GPT_SR_ROV;
  verify   = getreg32(g_tickless.base + IMXRT_GPT_CNT_OFFSET);

  /* If an interrupt was pending before we re-enabled interrupts,
   * then the overflow needs to be incremented.
   */

  if (pending)
    {
      /* Clear the rollover interrupt */

      putreg32(GPT_SR_ROV, g_tickless.base + IMXRT_GPT_SR_OFFSET);

      /* Increment the overflow count and use the value of the
       * guaranteed to be AFTER the overflow occurred.
       */

      overflow++;
      counter = verify;

      /* Update tickless overflow counter. */

      g_tickless.overflow = overflow;
    }

  leave_critical_section(flags);

  /* Convert the whole thing to units of microseconds.
   *
   *   frequency = ticks / second
   *   seconds   = ticks * frequency
   *   usecs     = (ticks * USEC_PER_SEC) / frequency;
   */

  usec = ((((uint64_t)overflow << 32) + (uint64_t)counter) * \
          USEC_PER_SEC) / g_tickless.frequency;

  /* And return the value of the timer */

  sec         = (uint32_t)(usec / USEC_PER_SEC);
  ts->tv_sec  = sec;
  ts->tv_nsec = (usec - (sec * USEC_PER_SEC)) * NSEC_PER_USEC;

  return OK;
}
