==> apache/nuttx/arch/arm/src/stm32/stm32_tickless.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <stdbool.h>
#include <errno.h>
#include <assert.h>
#include <nuttx/arch.h>
#include <debug.h>
#include "arm_internal.h"
#include "stm32_tim.h"
 #define HAVE_32BIT_TICKLESS 1

static void stm32_interval_handler(void)
{
  tmrinfo("Expired...\n");

  /* Disable the compare interrupt now. */

  stm32_tickless_disableint(g_tickless.channel);
  stm32_tickless_ackint(g_tickless.channel);

  g_tickless.pending = false;

  nxsched_timer_expiration();
}

static void stm32_timing_handler(void)
{
  g_tickless.overflow++;

  STM32_TIM_ACKINT(g_tickless.tch, GTIM_SR_UIF);
}

static int stm32_tickless_handler(int irq, void *context, void *arg)
{
  int interrupt_flags = stm32_tickless_getint();

  if (interrupt_flags & ATIM_SR_UIF)
    {
      stm32_timing_handler();
    }

  if (interrupt_flags & (1 << g_tickless.channel))
    {
      stm32_interval_handler();
    }

  return OK;
}

void up_timer_initialize(void)
{
  switch (CONFIG_STM32_TICKLESS_TIMER)
    {
#ifdef CONFIG_STM32_TIM1
      case 1:
        g_tickless.base = STM32_TIM1_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM2
      case 2:
        g_tickless.base = STM32_TIM2_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM3
      case 3:
        g_tickless.base = STM32_TIM3_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM4
      case 4:
        g_tickless.base = STM32_TIM4_BASE;
        break;
#endif
#ifdef CONFIG_STM32_TIM5
      case 5:
        g_tickless.base = STM32_TIM5_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM6
      case 6:

        /* Basic timers not supported by this implementation */

        DEBUGASSERT(0);
        break;
#endif

#ifdef CONFIG_STM32_TIM7
      case 7:

        /* Basic timers not supported by this implementation */

        DEBUGASSERT(0);
        break;
#endif

#ifdef CONFIG_STM32_TIM8
      case 8:
        g_tickless.base = STM32_TIM8_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM9
      case 9:
        g_tickless.base = STM32_TIM9_BASE;
        break;
#endif
#ifdef CONFIG_STM32_TIM10
      case 10:
        g_tickless.base = STM32_TIM10_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM11
      case 11:
        g_tickless.base = STM32_TIM11_BASE;
        break;
#endif
#ifdef CONFIG_STM32_TIM12
      case 12:
        g_tickless.base = STM32_TIM12_BASE;
        break;
#endif
#ifdef CONFIG_STM32_TIM13
      case 13:
        g_tickless.base = STM32_TIM13_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM14
      case 14:
        g_tickless.base = STM32_TIM14_BASE;
        break;
#endif
#ifdef CONFIG_STM32_TIM15
      case 15:
        g_tickless.base = STM32_TIM15_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM16
      case 16:
        g_tickless.base = STM32_TIM16_BASE;
        break;
#endif

#ifdef CONFIG_STM32_TIM17
      case 17:
        g_tickless.base = STM32_TIM17_BASE;
        break;
#endif

      default:
        DEBUGASSERT(0);
    }

  /* Get the TC frequency that corresponds to the requested resolution */

  g_tickless.frequency = USEC_PER_SEC / (uint32_t)CONFIG_USEC_PER_TICK;
  g_tickless.timer     = CONFIG_STM32_TICKLESS_TIMER;
  g_tickless.channel   = CONFIG_STM32_TICKLESS_CHANNEL;
  g_tickless.pending   = false;
  g_tickless.period    = 0;
  g_tickless.overflow  = 0;

  tmrinfo("timer=%d channel=%d frequency=%lu Hz\n",
           g_tickless.timer, g_tickless.channel, g_tickless.frequency);

  g_tickless.tch = stm32_tim_init(g_tickless.timer);
  if (!g_tickless.tch)
    {
      tmrerr("ERROR: Failed to allocate TIM%d\n", g_tickless.timer);
      DEBUGASSERT(0);
    }

  STM32_TIM_SETCLOCK(g_tickless.tch, g_tickless.frequency);

  /* Set up to receive the callback when the counter overflow occurs */

  STM32_TIM_SETISR(g_tickless.tch, stm32_tickless_handler, NULL, 0);

  /* Initialize interval to zero */

  STM32_TIM_SETCOMPARE(g_tickless.tch, g_tickless.channel, 0);

  /* Setup compare channel for the interval timing */

  stm32_tickless_setchannel(g_tickless.channel);

  /* Set timer period */

#ifdef HAVE_32BIT_TICKLESS
  STM32_TIM_SETPERIOD(g_tickless.tch, UINT32_MAX);
#ifdef CONFIG_SCHED_TICKLESS_LIMIT_MAX_SLEEP
  g_oneshot_maxticks = UINT32_MAX;
#endif
#else
  STM32_TIM_SETPERIOD(g_tickless.tch, UINT16_MAX);
#ifdef CONFIG_SCHED_TICKLESS_LIMIT_MAX_SLEEP
  g_oneshot_maxticks = UINT16_MAX;
#endif
#endif

  /* Initialize the counter */

  STM32_TIM_SETMODE(g_tickless.tch, STM32_TIM_MODE_UP);

  /* Start the timer */

  STM32_TIM_ACKINT(g_tickless.tch, ~0);
  STM32_TIM_ENABLEINT(g_tickless.tch, GTIM_DIER_UIE);
}

int up_timer_gettime(struct timespec *ts)
{
  uint64_t usec;
  uint32_t counter;
  uint32_t verify;
  uint32_t overflow;
  uint32_t sec;
  int pending;
  irqstate_t flags;

  DEBUGASSERT(g_tickless.tch && ts);

  /* Temporarily disable the overflow counter.  NOTE that we have to be
   * careful here because  stm32_tc_getpending() will reset the pending
   * interrupt status.  If we do not handle the overflow here then, it will
   * be lost.
   */

  flags    = enter_critical_section();

  overflow = g_tickless.overflow;
  counter  = STM32_TIM_GETCOUNTER(g_tickless.tch);
  pending  = STM32_TIM_CHECKINT(g_tickless.tch, GTIM_SR_UIF);
  verify   = STM32_TIM_GETCOUNTER(g_tickless.tch);

  /* If an interrupt was pending before we re-enabled interrupts,
   * then the overflow needs to be incremented.
   */

  if (pending)
    {
      STM32_TIM_ACKINT(g_tickless.tch, GTIM_SR_UIF);

      /* Increment the overflow count and use the value of the
       * guaranteed to be AFTER the overflow occurred.
       */

      overflow++;
      counter = verify;

      /* Update tickless overflow counter. */

      g_tickless.overflow = overflow;
    }

  leave_critical_section(flags);

  tmrinfo("counter=%lu (%lu) overflow=%lu, pending=%i\n",
         (unsigned long)counter,  (unsigned long)verify,
         (unsigned long)overflow, pending);
  tmrinfo("frequency=%lu\n", g_tickless.frequency);

  /* Convert the whole thing to units of microseconds.
   *
   *   frequency = ticks / second
   *   seconds   = ticks * frequency
   *   usecs     = (ticks * USEC_PER_SEC) / frequency;
   */
#ifdef HAVE_32BIT_TICKLESS
  usec = ((((uint64_t)overflow << 32) + (uint64_t)counter) * USEC_PER_SEC) /
         g_tickless.frequency;
#else
  usec = ((((uint64_t)overflow << 16) + (uint64_t)counter) * USEC_PER_SEC) /
         g_tickless.frequency;
#endif

  /* And return the value of the timer */

  sec         = (uint32_t)(usec / USEC_PER_SEC);
  ts->tv_sec  = sec;
  ts->tv_nsec = (usec - (sec * USEC_PER_SEC)) * NSEC_PER_USEC;

  tmrinfo("usec=%llu ts=(%lu, %lu)\n",
          usec, (unsigned long)ts->tv_sec, (unsigned long)ts->tv_nsec);

  return OK;
}
